fixed collapse/expand height

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -273,7 +273,6 @@ td {
 .content-secondary {
   display: relative;
   background-color: $contrast-color;
-  max-height: 0px;
   overflow: hidden;
 }
 
